# FcTags

./: CT2B decoding.ipynb  Image subtraction for CT2B.ipynb  Linear unmixing for CT2B.ipynb  README.md  pyproject.toml
1_input_image/: T1_AF488.tif  T1_Cy3.tif  T1_merge.tif  T2_AF488.tif  T2_Cy3.tif  T2_Cy5.tif  T2_merge.tif  T3_AF488.tif  T3_merge.tif
2_image_registration/: aligned_T2_AF488.tif  aligned_T2_Cy3.tif  aligned_T2_Cy5.tif  aligned_T2_merge.tif  aligned_T3_AF488.tif  aligned_T3_Cy3.tif  aligned_T3_Cy5.tif  aligned_T3_merge.tif
3_Fiji_trim_input/: T1_Cy5.tif  T3_Cy3.tif  T3_Cy5.tif
3_Fiji_trim_output/: T1_Cy5.tif  T2_Cy3.tif  T2_Cy5.tif
4_extra_color_information/: T2_AF488.tif  T3_AF488.tif  T3_Cy3.tif  T3_Cy5.tif
6_Image_subtraction/: 01_SV2.tif  02_Synapse.tif  03_Tubulin.tif  T1_AF488.tif  T1_Cy3.tif
7_image_display/: 1_Tubulin.tif  2_Vimentin.tif  3_PKC.tif  4_Chx10.tif  5_SV2.tif  6_Synapsin.tif  Match Score.tif
